Revork og refactor af kommandoer
